[gd_scene load_steps=12 format=2]

[ext_resource path="res://Fonts/FasterOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Settings.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Quicksand-VariableFont_wght.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://DisplayPlayer.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.2, 0.2, 0.2, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.172549, 0.172549, 0.172549, 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 64
font_data = ExtResource( 3 )

[node name="Settings" type="Node2D"]
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 55.0
margin_right = 1024.0
margin_bottom = 141.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "Settings"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 201.0
margin_right = 1024.0
margin_bottom = 398.0
size_flags_vertical = 3

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 510.0
margin_bottom = 197.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 9 )
text = "Set Car Color"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 197.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 8.0
margin_right = 510.0
margin_bottom = 88.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 3 )
text = "Volume Level:"
align = 1

[node name="HSlider" type="HSlider" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 100.0
margin_right = 510.0
margin_bottom = 197.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 75.0
value = 75.0

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 402.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 9 )
text = "Back"

[node name="Popup" type="Popup" parent="."]
visible = true
margin_right = 1024.0
margin_bottom = 600.0

[node name="ColorRect" type="ColorRect" parent="Popup"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.223529, 0.223529, 0.223529, 0.643137 )

[node name="VBoxContainer" type="HBoxContainer" parent="Popup"]
margin_left = 128.0
margin_top = 64.0
margin_right = 896.0
margin_bottom = 536.0

[node name="VBoxContainer" type="VBoxContainer" parent="Popup/VBoxContainer"]
margin_right = 382.0
margin_bottom = 472.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Popup/VBoxContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 382.0
margin_bottom = 124.0
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="DisplayPlayer" parent="Popup/VBoxContainer/VBoxContainer/Label" instance=ExtResource( 4 )]
position = Vector2( 192, 14 )
rotation = 1.5708
scale = Vector2( 1.5, 1.5 )

[node name="close" type="Button" parent="Popup/VBoxContainer/VBoxContainer"]
margin_top = 238.0
margin_right = 382.0
margin_bottom = 472.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 9 )
text = "Close"

[node name="ColorPicker" type="ColorPicker" parent="Popup/VBoxContainer"]
margin_left = 386.0
margin_right = 768.0
margin_bottom = 472.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="drag_ended" from="VBoxContainer/HBoxContainer/VBoxContainer2/HSlider" to="." method="_on_HSlider_drag_ended"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Popup/VBoxContainer/VBoxContainer/close" to="." method="_on_close_pressed"]
[connection signal="color_changed" from="Popup/VBoxContainer/ColorPicker" to="." method="_on_ColorPicker_color_changed"]
